--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,7 @@
 <body class="d-flex flex-column min-vh-100 bg-dark text-light">
 
   <div class="container my-auto d-flex justify-content-center align-items-center flex-grow-1">
-    <form class="w-50">
+    <form>
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Email address</label>
         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
