--- a/templates/form.html
+++ b/templates/form.html
@@ -12,7 +12,7 @@
 <body class="d-flex flex-column min-vh-100 bg-dark text-light">
 
     <div class="container my-auto d-flex justify-content-center align-items-center flex-grow-1">
-        <form class="c-form" action="{{ url_for('user.create_user') }}" method="POST">
+        <form class="c-form" action="{{ url_for('user.create_user') }}" method="POST" c-append="#lista-append">
             <div class="mb-3">
                 <label for="exampleInputNome1" class="form-label">Nome</label>
                 <input type="text" class="form-control" id="exampleInputNome1" name="nome">
@@ -33,7 +33,7 @@
                 <input type="email" class="form-control" id="exampleInputEmail1" name="email">
             </div>
 
-            <button type="submit" class="btn btn-primary">Enviar</button>
+            <button type="submit" class="btn btn-success">Enviar</button>
         </form>
     </div>
 
