--- a/templates/index.html
+++ b/templates/index.html
@@ -30,9 +30,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('login.login') }}">Logout</a>
                     </li>
-                    <!-- <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </li> -->
                 </ul>
             </div>
         </div>
@@ -42,8 +39,27 @@
 
 <body class="d-flex flex-column min-vh-100 bg-dark text-light">
 
+    <!-- View all users -->
+    <div c-container="{{ url_for('user.list_user') }}"></div>
+    <!-- Create -->
+    <div c-container="{{ url_for('user.form_create') }}"></div>
 
-    <!-- include LIST/NEW/UPDATE -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content text-dark">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Informações</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" id="modal-user">
+                    <!-- View | Edit | Delete -->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
