--- a/templates/table.html
+++ b/templates/table.html
@@ -6,9 +6,10 @@
       <th scope="col">CPF</th>
       <th scope="col">E-mail</th>
       <th scope="col">Data de Nascimento</th>
+      <th scope="col">Ações</th>
     </tr>
   </thead>
-  <tbody>
+  <tbody id="lista-append">
 
     {% for u in user %}
 
