--- a/templates/index.html
+++ b/templates/index.html
@@ -20,16 +20,21 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
+                    {% if current_user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="{{ url_for('user.list_user') }}">Table</a>
                     </li>
                     <li class="nav-item">
-
                         <a class="nav-link" href="{{ url_for('user.form_create') }}">Form</a>
                     </li>
+
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('login.login') }}">Logout</a>
+
+                        <a class="nav-link" href="{{ url_for('login.logout') }}">Logout</a>
+                        {% else %}
+                        <a class="nav-link" href="{{ url_for('login.login') }}">Login</a>
                     </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
@@ -38,6 +43,22 @@
 </header>
 
 <body class="d-flex flex-column min-vh-100 bg-dark text-light">
+
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <ul class=flashes>
+        {% for message in messages %}
+        <li>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+    {% endwith %}
+
+    {% if current_user.is_authenticated %}
+
+    <div class="alert alert-dark" role="alert">
+        Olá, {{ current_user.name }}!
+    </div>
 
     <!-- View all users -->
     <div c-container="{{ url_for('user.list_user') }}"></div>
@@ -60,6 +81,8 @@
             </div>
         </div>
     </div>
+
+    {% endif %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
