Uso de recursos do jinja2 (extends)

--- a/templates/table.html
+++ b/templates/table.html
@@ -1,3 +1,8 @@
+{% extends "base.html" %}
+
+{% block title %}List users{% endblock %}
+
+{% block content %}
 <table class="table">
   <thead>
     <tr>
@@ -19,3 +24,4 @@
 
   </tbody>
 </table>
+{% endblock %}
