--- a/templates/login.html
+++ b/templates/login.html
@@ -25,7 +25,7 @@
     <form action="{{ url_for('login.login') }}" method="POST">
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Email</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email">
+        <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email">
       </div>
       <div class="mb-3">
         <label for="exampleInputPassword1" class="form-label">Senha</label>
